--- a/コーポレートサイト/css/contact.css
+++ b/コーポレートサイト/css/contact.css
@@ -210,7 +210,8 @@ form h2:first-child{
 
     .footer-nav ul{
         display: block;
-        float: right;
+        text-align: center;
+        width: 80px;
     }
     .footer-nav li {
         margin-bottom: 10px;
