--- a/コーポレートサイト/css/recruit.css
+++ b/コーポレートサイト/css/recruit.css
@@ -232,7 +232,8 @@ table th {
 
     .footer-nav ul{
         display: block;
-        float: right;
+        text-align: center;
+        width: 80px;
     }
     .footer-nav li {
         margin-bottom: 10px;
