--- a/コーポレートサイト/css/index.css
+++ b/コーポレートサイト/css/index.css
@@ -101,8 +101,7 @@ font-weight: bold;
    ---------------*/
 
 .top_feature{
-    padding: 80px 7.5%;
-    height: 143px;
+    padding: 80px 7%;
     align-items: center;
     color: white;
     background-color: rgb(44, 43, 43);
@@ -138,6 +137,9 @@ font-weight: bold;
 
 .service_sectioon{
     width: 529px;
+    margin-top: 20px;
+    line-height: normal;
+    margin-right: calc(100% - (49% * 2));
 }
 
 .service_wrap{
@@ -146,9 +148,8 @@ font-weight: bold;
     flex-wrap: wrap;
 }
 
-.service_sectioon{
-    margin-top: 20px;
-    line-height: normal;
+.service_sectioon img{
+    width: 529px;
 }
 
 .service_sectioon h2{
@@ -157,7 +158,7 @@ font-weight: bold;
 }
 
 .service_sectioon:nth-of-type(even){
-    margin-left: 21px;
+    margin-right: 0;
 }
 
 .service button{
@@ -350,23 +351,38 @@ footer a{
         flex-wrap: wrap;
       }
 
-      .blog_text img{
-          width: 529px;
-          height: auto;
-        }
+      .blog_text_center{
+        margin: 0;
+      }
 
       .footer-nav li:nth-of-type(even){
         display: none;
     }
+      .blog{
+        margin: 0 auto;
+    }
+
+
+    .service_sectioon{
+        margin-right: 0;
+    }
+
+
+    .service_sectioon img, p ,h2{
+        display: block;
+        width: 85%;
+        height: auto;
+        margin: 0 auto;
+    }
 
     .footer-nav ul{
         display: block;
-        float: right;
+        text-align: center;
+        width: 80px;
     }
     .footer-nav li {
         margin-bottom: 10px;
     }
-
 
 
 }
