--- a/コーポレートサイト/css/service.css
+++ b/コーポレートサイト/css/service.css
@@ -222,8 +222,10 @@ footer a{
 
     .footer-nav ul{
         display: block;
-        float: right;
+        text-align: center;
+        width: 80px;
     }
+    
     .footer-nav li {
         margin-bottom: 10px;
     }
